--- a/_posts/2015-03-16-egx-rezzed-2015.markdown
+++ b/_posts/2015-03-16-egx-rezzed-2015.markdown
@@ -25,7 +25,7 @@ I already owe this game named **the Escapists** on Xbox One, but I wanted to che
 
 I played this survival adventure game named **The flame in the flood** created by The Molasses Flood, for a good fifteen minutes. I really enjoyed the music and the strong narrative behind the title. This is clearly my type of game and I would probably end up buying it :) Again, after a little bit of googling I found their [Kickstarter page](https://www.kickstarter.com/projects/molassesflood/the-flame-in-the-flood)!
 
-<img src="/images/egxrezzed15-flame.JPG" alt="Flame in the flood" title="Flame in the flood"/>
+<img src="/images/egxrezzed15-flame.jpg" alt="Flame in the flood" title="Flame in the flood"/>
 
 **Maia** is a very interesting and promising title. I played this title for about 20 minutes, less than the average player with a 50 minutes on the clock :S I enjoyed creating my station somewhere within an unknown galaxy and been given instructions by Simon Roth, the creator. Be careful when playing this game as there are a lot of jokes. So stay straight and enjoy it! :D The team have a [website](http://maiagame.com/) so check it out :) 
 
@@ -37,7 +37,7 @@ I've only had a quick glance at this game named **Mushroom 11** and I was very i
 
 Amazing alpha version of **RPG Tycoon** and it is already available on [Steam](http://store.steampowered.com/app/314240/). I do love my tycoons and I always enjoy building as well as destroying a population. Adding the RPG style makes it a perfect combination. The only downside it's that I didn't save my progression. Definetely a must owe game :) 
 
-<img src="/images/egxrezzed15-rpgtycoon.JPG" alt="EGX Jam" title="EGX Jam"/>
+<img src="/images/egxrezzed15-rpgtycoon.jpg" alt="EGX Jam" title="EGX Jam"/>
 
 Some amazing tech were being showcased on that day. [**Roto VR**](http://invisioncommunity.co.uk/2015/03/16/rezzed-2015-first-look-at-roto-vr/) was one of them. This tech looked amazing and a lot of people seemed to have great fun with it. Unfortunately the waiting time was somewhere between one to two hours and I couldn't afford the miss out on the developer sessions :(
 
@@ -62,4 +62,4 @@ At the very end of the day, I had the pleasure to check out the demos of the Cre
 <img src="/images/egxrezzed15-jam.JPG" alt="EGX Jam" title="EGX Jam"/>
 
 And finally I didn't leave alone on that day... Meet my new friend Dave!
-<img class="img-small" src="/images/egxrezzed15-dave.JPG" alt="Meet Dave" title="Meet Dave"/>
+<img class="img-small" src="/images/egxrezzed15-dave.jpg" alt="Meet Dave" title="Meet Dave"/>
